Alignment fix forms authentication
git-svn-id: svn://gallium.openminds.be/opt/svn/fork2/trunk@1810 869247f0-a1f3-4d5c-9449-4b73fc252fa6

--- a/default_www/backend/modules/authentication/layout/css/authentication.css
+++ b/default_www/backend/modules/authentication/layout/css/authentication.css
@@ -132,8 +132,6 @@ body#login {
 		#loginFields label {
 			font-size: 11px;
 			color: #666;
-			display: block;
-			width: 110px;
 		}
 		
 		#loginFields input {
@@ -146,7 +144,7 @@ body#login {
 
 		#loginBox p.spacing {
 			padding-bottom: 0;
-			padding-left: 158px;
+			padding-left: 163px;
 		}
 
 		/* Balloon overrides */
